Add LR use case

--- a/bodo-ce/Dockerfile
+++ b/bodo-ce/Dockerfile
@@ -4,6 +4,9 @@ FROM continuumio/miniconda
 RUN conda create -n Bodo python=3.8 && \
     conda install bodo -c bodo.ai -c conda-forge -n Bodo
 
-RUN conda install tabpy-server ipyparallel -y -n Bodo
+RUN git clone https://github.com/Bodo-inc/Bodo-examples
 
-EXPOSE 9004
+RUN conda install ipyparallel scipy -y -n Bodo -c conda-forge
+
+RUN conda run -n Bodo pip install snowflake-sqlalchemy tabpy
+
