--- a/bodo-tabpy-ipyparallel/Dockerfile
+++ b/bodo-tabpy-ipyparallel/Dockerfile
@@ -1,5 +1,7 @@
 FROM tfoldi/bodo-ce
 
-COPY start-ipp-tabpy.sh ./
+COPY start-ipp-tabpy.sh lr-bodo-tabpy.py ./
+
+EXPOSE 8080
 
 CMD ["./start-ipp-tabpy.sh"]
